Prevent Quill editor from inserting additional whitespace.

--- a/src/assets/general-styles.scss
+++ b/src/assets/general-styles.scss
@@ -61,3 +61,7 @@ input, textarea {
     background-color: $primary-dk;
   }
 }
+
+footer {
+  overflow: hidden;
+}
